# addressed-link-protocol

./: .gitignore  README.md  SPEC.md  alp_stream_parser.c  alp_stream_parser.h  communication_protocol.c  communication_protocol.h  communication_protocol.py  library.properties  pyproject.toml
alpcom/: __init__.py  alp_message_ids.h  alpcom.h  message_ids.py  message_registry.py  protocol.py
c/include/: communication_protocol.h
c/src/: alp_stream_parser.c  communication_protocol.c
examples/: __init__.py  python_example.py
examples/arduino_example/: arduino_example.ino
proto/: example.proto
scripts/: generate_all_proto.ps1  generate_message_registry.py  generate_proto_c.ps1  generate_proto_python.ps1
src/: alp_message_ids.h  alp_stream_parser.c  alpcom.c  alpcom.h  example.pb.c  example.pb.h  pb.h  pb_common.c  pb_common.h  pb_decode.c  pb_decode.h  pb_encode.c  pb_encode.h
tests/: alp_stream_parser_test.c  alpcom_smoketest.c  protobuf_alp_smoketest.c  test_generate_message_registry.py  test_protocol.py
