[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alpcom"
version = "0.1.0"
description = "Addressed Link Protocol helpers for Python payload framing and decoding."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "protobuf>=4.25",
]

[project.optional-dependencies]
serial = [
    "pyserial>=3.5",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["alpcom", "generated", "generated.python"]
